[package]
name = "xyz-parse"
version = "0.1.0"
edition = "2021"

[lib]
name = "xyz_parse"
crate-type = ["cdylib"]

[features]
default = ["python"]
python = ["pyo3"]

[dependencies]
rust_decimal = { version = "1.35", default-features = false }
pyo3 = { version = "0.21", features = ["rust_decimal", "extension-module"], optional = true }
